<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsTourActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <include layout="@layout/toolbar_book" />

            <ImageView
                android:id="@+id/tour_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tour_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <TextView
                    android:id="@+id/tour_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tour_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tour_price_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/discount_background"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/tour_price"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp">

                <TextView
                    android:id="@+id/tour_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/tour_duration"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_duration" />

                <TextView
                    android:id="@+id/tour_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/tour_location"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_location" />


                <TextView
                    android:id="@+id/tour_transportation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/tour_transport"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_transportation"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/tour_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="16dp"
                android:text="@string/tour_description"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tour_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="16dp"
                android:text="@string/tour_desc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcComment"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reviews"/>
                <EditText
                    android:id="@+id/edtComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="15dp"/>
                <Button
                    android:id="@+id/btnComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comment"
                    android:layout_gravity="right"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#009688"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp">

                <Spinner
                    android:id="@+id/sniper"
                    android:layout_width="10dp"
                    android:layout_weight="1"
                    android:layout_height="20dp"
                    android:layout_marginStart="16dp"


                    android:layout_marginEnd="16dp"
                    android:background="@drawable/spinner" />

                <Button
                    android:id="@+id/book_now_button"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B1634B"
                    android:text="@string/book_now"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>